# EdbertsDatabase

./: .gitignore  Application.hs  Dockerfile  EdbertsDatabase.cabal  Foundation.hs  Import.hs  Model.hs  README.md  build_and_deploy.sh  cabal.config  devel.hs  docker-compose.yaml  edb.sql  gen_group_names.rb  todo.txt
Handler/: EditGroup.hs  EditPerson.hs  Group.hs  Groups.hs  Home.hs  NewGroup.hs  NewPerson.hs  People.hs  Person.hs  PersonUtils.hs  Plugins.hs  Query.hs  QueryUtils.hs  QuickQuery.hs  Utils.hs
Handler/Groups/: EditGroup.hs  Group.hs  Groups.hs  NewGroup.hs
Handler/People/: EditPerson.hs  NewPerson.hs  People.hs  Person.hs  PersonUtils.hs
Handler/Quals/: EditQual.hs  NewQual.hs  Qual.hs  Quals.hs
Handler/Registers/: EditRegister.hs  Register.hs  TakeRegister.hs  ViewRegister.hs
Handler/Stats/: Stats.hs
config/: keter.yml  models  nginx.conf  nginx.htpasswd  postgresql.yml  routes  settings.yml
deploy/: Procfile
postgres-build/: Dockerfile
scripts/: build_and_deploy.sh  run_app.sh  rundb.sh  send_production_static.sh
static/css/: query-builder.min.css
static/js/: query-builder.min.js
templates/: datepicker.julius  default-layout.hamlet  default-layout.julius  default-layout.lucius  edit-group.hamlet  edit-group.julius  edit-group.lucius  edit-person.hamlet  edit-person.julius  group.hamlet  group.julius  groups.hamlet  groups.julius  homepage.hamlet  new-group.hamlet  new-group.julius  new-person.hamlet  people.hamlet  people.julius  people.lucius  person.hamlet  person.julius  query-builder.hamlet  query-builder.lucius
templates/Groups/: edit-group.hamlet  edit-group.julius  group.hamlet  group.julius  groups.hamlet  groups.julius  new-group.hamlet  new-group.julius
templates/People/: edit-person.hamlet  edit-person.julius  new-person.hamlet  people.hamlet  people.julius  person.hamlet  person.julius
templates/Quals/: edit-qual.hamlet  edit-qual.julius  new-qual.hamlet  qual.hamlet  qual.julius  quals.hamlet
templates/Registers/: edit-register.hamlet  register.hamlet  register.julius  register.lucius  take-register.hamlet  take-register.julius  take-register.lucius  view-register.hamlet  view-register.julius  view-register.lucius
templates/Stats/: stats.hamlet  stats.julius  stats.lucius
test/: PeopleTest.hs  main.hs
