name:              EdbertsDatabase
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.QuickQuery
                     Handler.Utils
                     Handler.Plugins
                     Handler.People.Person
                     Handler.People.EditPerson
                     Handler.People.NewPerson
                     Handler.People.People
                     Handler.People.PersonUtils
                     Handler.Groups.Groups
                     Handler.Groups.NewGroup
                     Handler.Groups.Group
                     Handler.Groups.EditGroup
                     Handler.Quals.Quals
                     Handler.Quals.Qual
                     Handler.Quals.NewQual
                     Handler.Quals.EditQual
                     Handler.Registers.TakeRegister
                     Handler.Registers.ViewRegister
                     Handler.Registers.EditRegister
                     Handler.Stats.Stats

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0 -fno-warn-orphans
    else
        ghc-options:   -Wall -fwarn-tabs -O2 -fno-warn-orphans

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TypeSynonymInstances
                FlexibleInstances

    build-depends: base                  
                 , yesod                 
                 , yesod-core            
                 , yesod-auth            
                 , yesod-static          
                 , yesod-form            
                 , bytestring            
                 , text                  
                 , persistent            
                 , persistent-postgresql 
                 , persistent-template   
                 , template-haskell
                 , shakespeare          
                 , hjsmin               
                 , monad-control        
                 , wai-extra            
                 , yaml                 
                 , http-conduit         
                 , directory            
                 , warp                 
                 , data-default
                 , aeson               
                 , conduit             
                 , monad-logger        
                 , fast-logger         
                 , wai-logger          
                 , time                
                 , blaze-markup        

    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable         EdbertsDatabase
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , EdbertsDatabase
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    build-depends: base
                 , EdbertsDatabase
                 , yesod-test >= 1.4 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
